--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
-  <link rel="stylesheet" href="/css/style.css">
-  
+  <link rel="stylesheet" href="css/style.css">  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 
