--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <title>Dreamteam</title>
   <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-    />
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
   <link rel="stylesheet" href="css/style.css">  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
-
 <body> 
+  <div class="preloader">
+    <div id="video-bg">
+      <video class="videoplayer" width="100%" height="auto" preload="auto" autoplay loop muted src="video/loader.mp4"></video>      
+    </div>
+  </div>
+  
 
   <input type="radio" id="page-1" name="screen" />
   <input type="radio" id="page-2" name="screen" />  
